...
        android:background="@color/colorAccent"
        app:layout_constraintCircleRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/participants"
        android:layout_width="0dp"
...
