<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salle"
                style="@style/Widget.MaterialComponents.Chip.Action"
                app:chipEndPadding="10dp"
                app:chipIcon="@drawable/ic_baseline_meeting_room_24"
                app:chipIconVisible="true"
                app:chipStartPadding="10dp"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_date"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                app:chipEndPadding="10dp"
                app:chipIcon="@drawable/ic_baseline_calendar_today_24"
                app:chipIconEnabled="true"
                app:chipIconSize="20dp"
                app:chipIconVisible="true"
                app:chipStartPadding="10dp"
                app:closeIconEnabled="false" />
        </com.google.android.material.chip.ChipGroup>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meeting_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_layout"
        tools:listitem="@layout/item_list_meeting"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/add_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>