<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lamzone.mareu.MainActivity">
    <item
        android:id="@+id/filter"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="always" />
</menu>